--- a/frontend/src/app/compoments/header/header-top/header-top.component.html
+++ b/frontend/src/app/compoments/header/header-top/header-top.component.html
@@ -1,44 +1,47 @@
 <div class="header-top">
-    <div class="menu-toggle" (click)="toggleMenu()">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
+    <div class="container-fluid">
+        <div class="main__header--inner position__relative d-flex justify-content-between align-items-center">
+        <div class="menu-toggle" (click)="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
 
-    <div class="logo">
-        <!-- <img src="assets/logo.png" alt="SHARKCART Logo" /> -->
-        <span>SHARKCART</span>
-    </div>
+        <div class="logo">
+            <!-- <img src="assets/logo.png" alt="SHARKCART Logo" /> -->
+            <span>SHARKCART</span>
+        </div>
 
-    <div class="search-bar">
-        <select name="category">
-            <option value="">All Categories</option>
-        </select>   
-        <app-search-box [placeholder]="'Keyword Here..'" [size]="'medium'" (search)="onSearch($event)"></app-search-box>
-    </div>
+        <div class="search-bar">
+            <app-dropdown-filter [items]="dropDownList"></app-dropdown-filter>
+            <app-search-box [placeholder]="'Keyword Here..'" [size]="'large'"
+                (search)="onSearch($event)"></app-search-box>
+        </div>
 
-    <div class="header__account header__sticky--none">
-        <ul class="d-flex">
-            <li class="header__account--items">
-                <a class="header__account--btn" href="my-account.html">
-                    <i class="bi bi-person" style="font-size: 24px;"></i>
-                    <span class="header__account--btn__text">My Account</span>
-                </a>
-            </li>
-            <li class="header__account--items">
-                <a class="header__account--btn" href="my-account.html">
-                    <i class="bi bi-heart" style="font-size: 24px;"></i>
-                    <span class="header__account--btn__text">wish List</span>
-                    <span class="items__count wishlist">02</span>
-                </a>
-            </li>
-            <li class="header__account--items">
-                <a class="header__account--btn" href="my-account.html">
-                    <i class="bi bi-cart4" style="font-size: 24px;"></i>
-                    <span class="header__account--btn__text">My Cart</span>
-                    <span class="items__count wishlist">02</span>
-                </a>
-            </li>
-        </ul>
+        <div class="header__account header__sticky--none">
+            <ul class="d-flex">
+                <li class="header__account--items">
+                    <a class="header__account--btn" href="my-account.html">
+                        <i class="bi bi-person" style="font-size: 24px;"></i>
+                        <span class="header__account--btn__text">My Account</span>
+                    </a>
+                </li>
+                <li class="header__account--items">
+                    <a class="header__account--btn" href="my-account.html">
+                        <i class="bi bi-heart" style="font-size: 24px;"></i>
+                        <span class="header__account--btn__text">wish List</span>
+                        <span class="items__count wishlist">02</span>
+                    </a>
+                </li>
+                <li class="header__account--items">
+                    <a class="header__account--btn" href="my-account.html">
+                        <i class="bi bi-cart4" style="font-size: 24px;"></i>
+                        <span class="header__account--btn__text">My Cart</span>
+                        <span class="items__count wishlist">02</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     </div>
 </div>
