--- a/frontend/src/app/features/register/register.component.html
+++ b/frontend/src/app/features/register/register.component.html
@@ -1,84 +1,86 @@
-<div class="flex items-center justify-center min-h-screen bg-gray-100">
-    <div class="bg-white p-8 rounded-lg shadow-lg w-96">
-        <h2 class="text-2xl font-semibold text-center mb-4">Sign Up</h2>
-        <form [formGroup]="formGroup" (ngSubmit)="registraionHandle()">
-            <div class="mb-4">
-                <label for="firstName" class="block text-sm font-medium text-gray-700">First Name</label>
-                <input id="firstName" type="text" formControlName="firstName"
-                    class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                    placeholder="e.g. John" />
-                <div *ngIf="formGroup.get('firstName')?.invalid && formGroup.get('firstName')?.touched"
-                    class="text-red-600 text-sm">
-                    This field is required
-                </div>
+<section class="contact__section section--padding">
+    <div class="container">
+        <div class="contact__form">
+            <div class="main__contact--area position__relative">
+                <h3 class="contact__form--title mb-40">Sign Up</h3>
+                <form [formGroup]="formGroup" (ngSubmit)="registraionHandle()" class="contact__form--inner">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6">
+                            <label class="contact__form--label" for="input1">First Name <span
+                                    class="contact__form--label__star">*</span></label>
+                            <input id="firstName" type="text" formControlName="firstName" class="contact__form--input"
+                                placeholder="Your First Name" type="text">
+                            <div *ngIf="formGroup.get('firstName')?.invalid && formGroup.get('firstName')?.touched"
+                                class="text-red-600 text-sm">This field is required</div>
+                        </div>
+                        <div class="col-lg-6 col-md-6">
+                            <div class="contact__form--list mb-20">
+                                <label class="contact__form--label">Last Name <span
+                                        class="contact__form--label__star">*</span></label>
+                                <input id="lastName" type="text" formControlName="lastName" class="contact__form--input"
+                                    placeholder="Your Last Name" type="text">
+                                <div *ngIf="formGroup.get('lastName')?.invalid && formGroup.get('lastName')?.touched"
+                                    class="text-red-600 text-sm">This field is required</div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6">
+                            <label for="email" class="contact__form--label" for="input4">Email <span
+                                    class="contact__form--label__star">*</span></label>
+                            <input id="email" type="email" formControlName="email" class="contact__form--input"
+                                type="email" placeholder="e.g. johndoe@gmail.com" />
+                            <div *ngIf="formGroup.get('email')?.hasError('required') && formGroup.get('email')?.touched"
+                                class="text-red-600 text-sm">
+                                This field is required
+                            </div>
+                            <div *ngIf="formGroup.get('email')?.hasError('email') && formGroup.get('email')?.touched"
+                                class="text-red-600 text-sm">
+                                Please enter a valid email address
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6">
+                            <label for="password" class="contact__form--label" for="input4">Password <span
+                                    class="contact__form--label__star">*</span></label>
+                            <input id="password" type="password" formControlName="password" class="contact__form--input"
+                                placeholder="*********" />
+                            <div *ngIf="formGroup.get('password')?.hasError('required') && formGroup.get('password')?.touched"
+                                class="text-red-600 text-sm">
+                                This field is required
+                            </div>
+                            <div *ngIf="formGroup.get('password')?.hasError('pattern') && formGroup.get('password')?.touched"
+                                class="text-red-600 text-sm">
+                                Please enter a valid password
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6">
+                            <label for="contactNumber" class="contact__form--label">Contact Number <span class="contact__form--label__star">*</span></label>
+                            <div class="flex items-center">
+                                <span class="text-gray-700 text-lg mr-2">+91 </span>
+                                <input id="contact" type="tel" formControlName="contact" class="contact__form--input" placeholder="82 123 1234" />
+                            </div>
+                            <div *ngIf="formGroup.get('contact')?.hasError('required') && formGroup.get('contact')?.touched"
+                                class="text-red-600 text-sm">
+                                This field is required
+                            </div>
+                            <div *ngIf="formGroup.get('contact')?.hasError('pattern') && formGroup.get('contact')?.touched"
+                                class="text-red-600 text-sm">
+                                Please enter a valid mobile number
+                            </div>
+                        </div>
+                        <!-- <div class="col-12">
+                            <div class="contact__form--list mb-15">
+                                <label class="contact__form--label" for="input5">Write Your Message <span
+                                        class="contact__form--label__star">*</span></label>
+                                <textarea class="contact__form--textarea" name="message" id="input5"
+                                    placeholder="Write Your Message"></textarea>
+                            </div>
+                        </div> -->
+                    </div>
+                    <app-primary-button [label]="'Register'" [size]="'lg'" class="mt-2" />
+                    <div class="mt-4 text-center">
+                        <p>Already account? <a routerLink="/login" class="text-purple-600 hover:cursor-pointer">Sign In</a></p>
+                    </div>
+                </form>
             </div>
-
-            <div class="mb-4">
-                <label for="lastName" class="block text-sm font-medium text-gray-700">Last Name</label>
-                <input id="lastName" type="text" formControlName="lastName"
-                    class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                    placeholder="e.g. Doe" />
-                <div *ngIf="formGroup.get('lastName')?.invalid && formGroup.get('lastName')?.touched"
-                    class="text-red-600 text-sm">
-                    This field is required
-                </div>
-            </div>
-
-            <div class="mb-4">
-                <label for="emailAddress" class="block text-sm font-medium text-gray-700">Email Address</label>
-                <input id="email" type="email" formControlName="email"
-                    class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                    placeholder="e.g. johndoe@gmail.com" />
-                <div *ngIf="formGroup.get('email')?.hasError('required') && formGroup.get('email')?.touched"
-                    class="text-red-600 text-sm">
-                    This field is required
-                </div>
-                <div *ngIf="formGroup.get('email')?.hasError('email') && formGroup.get('email')?.touched"
-                    class="text-red-600 text-sm">
-                    Please enter a valid email address
-                </div>
-            </div>
-
-            <div class="mb-4">
-                <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-                <input id="password" type="password" formControlName="password"
-                    class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                    placeholder="*********" />
-                <div *ngIf="formGroup.get('password')?.hasError('required') && formGroup.get('password')?.touched"
-                    class="text-red-600 text-sm">
-                    This field is required
-                </div>
-                <div *ngIf="formGroup.get('password')?.hasError('pattern') && formGroup.get('password')?.touched"
-                    class="text-red-600 text-sm">
-                    Please enter a valid password
-                </div>
-            </div>
-
-            <div class="mb-4">
-                <label for="contactNumber" class="block text-sm font-medium text-gray-700">Contact Number</label>
-                <div class="flex items-center">
-                    <span class="text-gray-700 text-lg mr-2">+27</span>
-                    <input id="contact" type="tel" formControlName="contact"
-                        class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                        placeholder="82 123 1234" />
-                </div>
-                <div *ngIf="formGroup.get('contact')?.hasError('required') && formGroup.get('contact')?.touched"
-                    class="text-red-600 text-sm">
-                    This field is required
-                </div>
-                <div *ngIf="formGroup.get('contact')?.hasError('pattern') && formGroup.get('contact')?.touched"
-                    class="text-red-600 text-sm">
-                    Please enter a valid mobile number
-                </div>
-            </div>
-
-            <div class="mb-4">
-                <app-primary-button label="Sign In" />
-            </div>
-
-            <div class="mt-4 text-center">
-                <p>Already account? <a routerLink="/login" class="text-purple-600 hover:cursor-pointer">Sign In</a></p>
-            </div>
-        </form>
+        </div>
     </div>
-</div>
+</section>
