Changes For Create Order Api for FE and BE

--- a/frontend/src/app/compoments/header/header-top/header-top.component.html
+++ b/frontend/src/app/compoments/header/header-top/header-top.component.html
@@ -37,7 +37,7 @@
                     <a class="header__account--btn" (click)="goToCart()">
                         <i class="bi bi-cart4" style="font-size: 24px;"></i>
                         <span class="header__account--btn__text">My Cart</span>
-                        <span class="items__count wishlist">{{ cartItems.length }}</span>
+                        <span class="items__count wishlist">{{ cratItems }}</span>
                     </a>
                 </li>
             </ul>
