Add some Component for Reusability

--- a/frontend/src/app/compoments/header/header-top/header-top.component.html
+++ b/frontend/src/app/compoments/header/header-top/header-top.component.html
@@ -21,7 +21,7 @@
         <div class="header__account header__sticky--none">
             <ul class="d-flex">
                 <li class="header__account--items">
-                    <a class="header__account--btn" href="my-account.html">
+                    <a class="header__account--btn" (click)="goToAccount()">
                         <i class="bi bi-person" style="font-size: 24px;"></i>
                         <span class="header__account--btn__text">My Account</span>
                     </a>
