--- a/frontend/src/app/compoments/stepper/stepper.component.html
+++ b/frontend/src/app/compoments/stepper/stepper.component.html
@@ -9,7 +9,7 @@
     </li>
   </ul>
 
-  <div class="step-content">
+  <div class="step-content" [ngClass]="animationDirection">
     <ng-container #dynamicComponentContainer></ng-container>
   </div>
 </div>
