--- a/frontend/src/app/compoments/stepper/stepper.component.scss
+++ b/frontend/src/app/compoments/stepper/stepper.component.scss
@@ -42,7 +42,7 @@
 }
 
 .stepper-list li.active .step-number {
-  background: #007bff;
+  background: var(--secondary-color);
 }
 
 .stepper-list li.completed .step-number {
@@ -73,4 +73,34 @@
 button:disabled {
   cursor: not-allowed;
   opacity: 0.65;
+}
+
+.slide-left {
+  animation: slideInLeft 0.4s ease;
+}
+
+.slide-right {
+  animation: slideInRight 0.4s forwards;
+}
+
+@keyframes slideInLeft {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0%);
+    opacity: 1;
+  }
 }
