--- a/frontend/src/app/compoments/search-box/search-box.component.scss
+++ b/frontend/src/app/compoments/search-box/search-box.component.scss
@@ -27,7 +27,7 @@
     transition: background-color 0.3s;
 
     &:hover {
-      background-color: darken(#ff3366, 10%);
+      background-color: #cc2957;
     }
 
     i {
