--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
 <main class="main__content_wrapper">
+    <app-header></app-header>
     <router-outlet></router-outlet>
+    <app-footer-section></app-footer-section>
 </main>
