Update Banner Heading Shape

--- a/frontend/src/app/pages/home/component/banner-section/banner-section.component.scss
+++ b/frontend/src/app/pages/home/component/banner-section/banner-section.component.scss
@@ -29,7 +29,7 @@
 .section__heading--maintitle::before {
 	position: absolute;
 	content: "";
-	background: url(../../../../../../public/other/heading-shape.png);
+	// background: url(../../../../../../public/other/heading-shape.png);
 	width: 174px;
 	height: 5px;
 	bottom: 0;
