--- a/frontend/src/app/pages/home/component/banner-section/banner-section.component.html
+++ b/frontend/src/app/pages/home/component/banner-section/banner-section.component.html
@@ -6,10 +6,10 @@
     <div *ngIf="type === 'categories'" class="row g-5 mb-5">
       <div class="col-lg-4 order-md-first">
         <div class="banner__items position-relative">
-          <a class="banner__items--thumbnail" [routerLink]="banners[0]?.link" [attr.aria-label]="'Shop ' + banners[0]?.alt">
-            <img class="banner__items--thumbnail__img" [src]="imageURL + '/' + banners[0]?.image" [alt]="banners[0]?.alt">
+          <a class="banner__items--thumbnail" [routerLink]="banners[0].link" [attr.aria-label]="'Shop ' + banners[0].alt">
+            <img class="banner__items--thumbnail__img" [src]="imageURL + '/' + banners[0].image" [alt]="banners[0].alt">
             <div class="banner__items--content style2">
-              <h3 class="banner__items--content__title style2" [innerHTML]="banners[0]?.title"></h3>
+              <h3 class="banner__items--content__title style2" [innerHTML]="banners[0].title"></h3>
               <span class="banner__items--content__link style2">SHOP NOW</span>
             </div>
           </a>
@@ -18,7 +18,7 @@
       <div class="col-lg-8">
         <div class="banner-style2-top-sidebar d-flex gap-5 mb-5">
           <div class="banner__items position-relative" *ngIf="banners[1]">
-            <a class="banner__items--thumbnail" [routerLink]="banners[1].link" [attr.aria-label]="'Shop ' + banners[1]?.alt">
+            <a class="banner__items--thumbnail" [routerLink]="banners[1].link" [attr.aria-label]="'Shop ' + banners[1].alt">
               <img class="banner__items--thumbnail__img" [src]="imageURL + '/' + banners[1].image" [alt]="banners[1].alt">
               <div class="banner__items--content style2">
                 <h3 class="banner__items--content__title style2" [innerHTML]="banners[1].title"></h3>
@@ -27,7 +27,7 @@
             </a>
           </div>
           <div class="banner__items position-relative" *ngIf="banners[2]">
-            <a class="banner__items--thumbnail" [routerLink]="banners[2].link" [attr.aria-label]="'Shop ' + banners[2]?.alt">
+            <a class="banner__items--thumbnail" [routerLink]="banners[2].link" [attr.aria-label]="'Shop ' + banners[2].alt">
               <img class="banner__items--thumbnail__img" [src]="imageURL + '/' + banners[2].image" [alt]="banners[2].alt">
               <div class="banner__items--content style2">
                 <h3 class="banner__items--content__title style2" [innerHTML]="banners[2].title"></h3>
@@ -39,7 +39,7 @@
         <div class="row row-cols-sm-2 row-cols-1 g-4">
           <div class="col" *ngIf="banners[3]">
             <div class="banner__items position-relative">
-              <a class="banner__items--thumbnail" [routerLink]="banners[3].link" [attr.aria-label]="'Shop ' + banners[3]?.alt">
+              <a class="banner__items--thumbnail" [routerLink]="banners[3].link" [attr.aria-label]="'Shop ' + banners[3].alt">
                 <img class="banner__items--thumbnail__img" [src]="imageURL + '/' + banners[3].image" [alt]="banners[3].alt">
                 <div class="banner__items--content style2">
                   <h3 class="banner__items--content__title style2" [innerHTML]="banners[3].title"></h3>
@@ -50,7 +50,7 @@
           </div>
           <div class="col" *ngIf="banners[4]">
             <div class="banner__items position-relative">
-              <a class="banner__items--thumbnail" [routerLink]="banners[4].link" [attr.aria-label]="'Shop ' + banners[4]?.alt">
+              <a class="banner__items--thumbnail" [routerLink]="banners[4].link" [attr.aria-label]="'Shop ' + banners[4].alt">
                 <img class="banner__items--thumbnail__img" [src]="imageURL + '/' + banners[4].image" [alt]="banners[4].alt">
                 <div class="banner__items--content style2" [ngClass]="banners[4].position">
                   <h3 class="banner__items--content__title style2" [innerHTML]="banners[4].title"></h3>
