--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- <app-hero-slider [slides]="slides"></app-hero-slider> -->
-<h1>This is Home Page - Update</h1>
+<h1>This is Home Page - Check Build</h1>
 <app-banner-section type="categories" [banners]="categoryBanners"></app-banner-section>
 <app-banner-section type="discount" [banners]="discountBanners" [discountContent]="discountContent"></app-banner-section>
 <!-- <app-brand-logos [logos]="brandLogos"></app-brand-logos> -->
