--- a/frontend/src/app/pages/products/component/product-card/product-card.component.html
+++ b/frontend/src/app/pages/products/component/product-card/product-card.component.html
@@ -1,13 +1,14 @@
 <div class="product__items">
     <div class="product__items--thumbnail">
-      <a class="product__items--link" (click)="viewProduct(product._id); $event.preventDefault()">
+      <a class="product__items--link" (click)="viewProduct(); $event.preventDefault()">
         <img
           class="product__items--img product__primary--img"
-          [src]="imageURL+'/'+product.image_urls[0]"
-          [alt]="'Product Image'"
+          [src]="getProductImage()"
+          [alt]="product.name"
         />
-        <img class="product__items--img product__secondary--img" [src]="imageURL+'/'+product.image_urls[1]"
-        [alt]="'Product Second Image'">
+        <img class="product__items--img product__secondary--img" 
+             [src]="product.image_urls?.[1] ? imageURL + '/' + product.image_urls[1] : getProductImage()"
+             [alt]="product.name">
       </a>
       <!-- <div class="product__badge" *ngIf="product.isOnSale">
         <span class="product__badge--items sale">Sale</span>
@@ -16,14 +17,14 @@
     <div class="product__items--content">
       <!-- <span class="product__items--content__subtitle">{{ product.subtitle }}</span> -->
       <h3 class="product__items--content__title h4">
-        <p (click)="viewProduct(product._id); $event.preventDefault()">
+        <p (click)="viewProduct(); $event.preventDefault()">
           {{ product.name }}
         </p>
       </h3>
       <div class="product__items--price">
         <span class="current__price">${{ product.base_price }}</span>
         <span class="price__divided" *ngIf="product.base_price"></span>
-        <span class="old__price" *ngIf="product.base_price">${{ product.base_price }}</span>
+        <span class="old__price" *ngIf="product.sale_price">${{ product.sale_price }}</span>
       </div>
       <app-rating class="product__rating"></app-rating>
       <ul class="product__items--action d-flex">
