--- a/frontend/src/app/pages/products/component/product-detail/product-detail.component.html
+++ b/frontend/src/app/pages/products/component/product-detail/product-detail.component.html
@@ -1,5 +1,5 @@
 <app-breadcrumb></app-breadcrumb>
-<section class="product__details--section section--padding">
+<section *ngIf="product" class="product__details--section section--padding">
     <div class="container">
         <div class="row row-cols-lg-2 row-cols-md-2">
             <div class="col">
