Set Cross-Origin-Resource-Policy: cross-origin in response header Update Images path

--- a/frontend/src/app/components/breadcrumb/breadcrumb.component.scss
+++ b/frontend/src/app/components/breadcrumb/breadcrumb.component.scss
@@ -70,7 +70,7 @@ h1 {
 }
 
 .breadcrumb__bg {
-	background: url(/breadcrumb-bg.png);
+	background: url(../../../../../backend/breadcrumb-bg.png);
 	background-repeat: no-repeat;
 	height: 130px;
 	display: -webkit-box;
